<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="14dp"
        android:onClick="openRegisterMovie"
        android:padding="15dp"
        android:text="@string/register_movie_button_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/displaymovies_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/displaymovies_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="14dp"
        android:onClick="openDisplayMovies"
        android:padding="15dp"
        android:text="@string/display_movies_button_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/favourites_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/favourites_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="14dp"
        android:onClick="openFavourites"
        android:padding="15dp"
        android:text="@string/favourites_button_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/editmovies_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaymovies_button"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/editmovies_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="14dp"
        android:onClick="openEditMovies"
        android:padding="15dp"
        android:text="@string/edit_movies_button_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_button"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="14dp"
        android:padding="15dp"
        android:text="@string/search_button_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/ratings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editmovies_button"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/ratings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="25dp"
        android:onClick="openRatings"
        android:padding="15dp"
        android:text="@string/ratings_button_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>